# VirtuosoImage

./: ArrayBuffer.h  ArrayBuffer.tcc  CMakeLists.txt  ColorTransform.h  Convolution.h  Gaussian.h  Gradient.h  Histogram.h  Image.cpp  Image.h  Image.tcc  ImageProcessing.cpp  ImageProcessing.h  InterpolationHelper.tcc  MultidimensionalArray.h  MultidimensionalArray.tcc  README.md  SharedPtrDeleters.h  SliceBuffer.h  SubregionHelper.tcc  linearize.h  linearize.tcc  mdarrayAccessors.tcc  mdarrayConstructors.tcc  mdarrayFunctions.tcc  mdarrayOperators.tcc  stb_image.h
test/: main.cpp
